--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@polymer/polymer": "^3.2.0",
     "d2l-icons": "BrightspaceUI/icons#semver:^6",
     "d2l-localize-behavior": "BrightspaceUI/localize-behavior#semver:^2",
+    "d2l-polymer-siren-behaviors": "Brightspace/polymer-siren-behaviors#semver:^1",
     "d2l-tooltip": "BrightspaceUI/tooltip#semver:^3"
   },
   "devDependencies": {
