--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d2l-hypermedia-constants": "Brightspace/d2l-hypermedia-constants#semver:^6",
     "d2l-localize-behavior": "BrightspaceUI/localize-behavior#semver:^2",
     "d2l-polymer-siren-behaviors": "Brightspace/polymer-siren-behaviors#semver:^1",
+    "d2l-resize-aware": "BrightspaceUI/resize-aware#semver:^1",
     "d2l-tooltip": "BrightspaceUI/tooltip#semver:^3",
     "d2l-typography": "BrightspaceUI/typography#semver:^7",
     "siren-entity": "BrightspaceHypermediaComponents/siren-entity#semver:^1"
