--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "d2l-resize-aware": "BrightspaceUI/resize-aware#semver:^1",
     "d2l-tooltip": "BrightspaceUI/tooltip#semver:^3",
     "d2l-typography": "BrightspaceUI/typography#semver:^7",
-    "siren-entity": "BrightspaceHypermediaComponents/siren-entity#semver:^1"
+    "d2l-more-less": "BrightspaceUI/more-less#semver:^5",
+    "siren-entity": "BrightspaceHypermediaComponents/siren-entity#semver:^1",
+    "s-html": "Brightspace/s-html#semver:^2"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
