--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "babel-eslint": "^10.0.1",
-    "chalk": "^2.4.2",
-    "d2l-polymer-langtools": "^1.1.0",
+    "d2l-polymer-langtools": "^1.1.1",
     "eslint": "^5.16.0",
     "eslint-config-brightspace": "^0.5.3",
-    "eslint-plugin-html": "^5.0.5",
-    "yargs": "^13.2.4"
+    "eslint-plugin-html": "^5.0.5"
   }
 }
