--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d2l-outcomes-user-progress",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,11 +13,12 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@brightspace-ui/core": "^1.30.0",
+    "@polymer/iron-a11y-announcer": "^3.0.2",
     "@polymer/polymer": "^3.2.0",
     "d2l-activity-alignments": "Brightspace/d2l-activity-alignments.git#semver:^1",
     "d2l-button": "BrightspaceUI/button#semver:^5",
-    "d2l-icons": "BrightspaceUI/icons#semver:^6",
     "d2l-hypermedia-constants": "^6",
+    "d2l-icons": "BrightspaceUI/icons#semver:^6",
     "d2l-localize-behavior": "BrightspaceUI/localize-behavior#semver:^2",
     "d2l-more-less": "BrightspaceUI/more-less#semver:^5",
     "d2l-polymer-siren-behaviors": "Brightspace/polymer-siren-behaviors#semver:^1",
@@ -30,7 +31,7 @@
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "babel-eslint": "^10.0.1",
-    "d2l-polymer-langtools": "^1.1.1",
+    "d2l-polymer-langtools": "^1.2.1",
     "eslint": "^5.16.0",
     "eslint-config-brightspace": "^0.5.3",
     "eslint-plugin-html": "^5.0.5"
