--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@brightspace-ui/core": "^1.30.0",
+    "@polymer/iron-collapse": "^3.0.1",
     "@polymer/polymer": "^3.2.0",
     "d2l-activity-alignments": "Brightspace/d2l-activity-alignments.git#semver:^1",
     "d2l-button": "BrightspaceUI/button#semver:^5",
-    "d2l-icons": "BrightspaceUI/icons#semver:^6",
     "d2l-hypermedia-constants": "^6",
+    "d2l-icons": "BrightspaceUI/icons#semver:^6",
     "d2l-localize-behavior": "BrightspaceUI/localize-behavior#semver:^2",
     "d2l-more-less": "BrightspaceUI/more-less#semver:^5",
     "d2l-polymer-siren-behaviors": "Brightspace/polymer-siren-behaviors#semver:^1",
