--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
     "@brightspace-ui/core": "^1.30.0",
     "@polymer/iron-a11y-announcer": "^3.0.2",
     "@polymer/iron-collapse": "^3.0.1",
-    "@polymer/polymer": "^3.2.0",
+    "@polymer/polymer": "^3.3.1",
     "d2l-activity-alignments": "Brightspace/d2l-activity-alignments.git#semver:^2",
-    "d2l-button": "BrightspaceUI/button#semver:^5",
-    "d2l-hypermedia-constants": "^6",
-    "d2l-icons": "BrightspaceUI/icons#semver:^6",
-    "d2l-localize-behavior": "BrightspaceUI/localize-behavior#semver:^2",
+    "d2l-button": "github:BrightspaceUI/button#semver:^5",
+    "d2l-hypermedia-constants": "^6.33.0",
+    "d2l-icons": "github:BrightspaceUI/icons#semver:^6",
+    "d2l-localize-behavior": "github:BrightspaceUI/localize-behavior#semver:^2",
     "d2l-more-less": "BrightspaceUI/more-less#semver:^5",
-    "d2l-polymer-siren-behaviors": "Brightspace/polymer-siren-behaviors#semver:^1",
-    "d2l-resize-aware": "BrightspaceUI/resize-aware#semver:^1",
-    "d2l-tooltip": "BrightspaceUI/tooltip#semver:^3",
-    "d2l-typography": "BrightspaceUI/typography#semver:^7",
-    "s-html": "Brightspace/s-html#semver:^2",
-    "siren-entity": "BrightspaceHypermediaComponents/siren-entity#semver:^1"
+    "d2l-polymer-siren-behaviors": "github:Brightspace/polymer-siren-behaviors#semver:^1",
+    "d2l-resize-aware": "github:BrightspaceUI/resize-aware#semver:^1",
+    "d2l-tooltip": "github:BrightspaceUI/tooltip#semver:^3",
+    "d2l-typography": "github:BrightspaceUI/typography#semver:^7",
+    "s-html": "github:Brightspace/s-html#semver:^2",
+    "siren-entity": "github:BrightspaceHypermediaComponents/siren-entity#semver:^1"
   },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "babel-eslint": "^10.0.1",
+    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "babel-eslint": "^10.1.0",
     "d2l-polymer-langtools": "^1.2.1",
     "eslint": "^5.16.0",
     "eslint-config-brightspace": "^0.5.3",
