Update to use COA components
- Primary panel instead of OUP details
- COA mini trend instead of local mini trend

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d2l-icons": "BrightspaceUI/icons#semver:^6",
     "d2l-localize-behavior": "BrightspaceUI/localize-behavior#semver:^2",
     "d2l-more-less": "BrightspaceUI/more-less#semver:^5",
+    "d2l-outcomes-overall-achievement": "Brightspace/d2l-outcomes-overall-achievement#semver:^1",
     "d2l-polymer-siren-behaviors": "Brightspace/polymer-siren-behaviors#semver:^1",
     "d2l-resize-aware": "BrightspaceUI/resize-aware#semver:^1",
     "d2l-tooltip": "BrightspaceUI/tooltip#semver:^3",
