--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "d2l-outcomes-user-progress",
   "version": "1.4.17",
-  "description": "",
-  "main": "index.js",
+  "description": "Web components for Outcomes User Progress page",
   "scripts": {
     "lang:build": "lang-build -ec langtools/config.json",
     "lang:copy": "lang-copy -svc langtools/config.json",
-    "lint:eslint": "eslint . --ext .js,.html"
+    "lint:eslint": "eslint . --ext .js,.html",
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open"
   },
   "author": "D2L Corporation",
   "license": "Apache-2.0",
@@ -33,6 +33,7 @@
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "babel-eslint": "^10.0.1",
     "d2l-polymer-langtools": "^1.2.1",
+    "es-dev-server": "^2.0.2",
     "eslint": "^5.16.0",
     "eslint-config-brightspace": "^0.5.3",
     "eslint-plugin-html": "^5.0.5"
