US124277 - Fix up languages
This adds missing languages and also adds language verification.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,78 @@ jobs:
         run: |
           npm install d2l-license-checker --no-save
           npx license-checker-ci
+  verify-languages:
+    name: Verify Languages
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: Brightspace/third-party-actions@actions/checkout
+      - name: Set up node
+        uses: Brightspace/third-party-actions@actions/setup-node
+        with:
+          node-version: ${{env.NODE_VERSION}}
+      - name: Set up cache
+        uses: Brightspace/third-party-actions@actions/cache
+        id: cache
+        with:
+          path: '**/node_modules'
+          key: npm-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci
+      - name: Verify Languages
+        run: |
+          match=true
+          target_files=$(ls -1 build/lang/ | sed -e 's/\.js$//')
+          source_files=$(ls -1 lang/ | sed -e 's/\.json$//')
+          all_files=$(echo -e "$target_files\n$source_files" | sort | uniq)
+          missing_sources=()
+          missing_targets=()
+          echo 'Checking file sets match'
+          for file in $all_files; do
+              source="lang/$file.json"
+              target="build/lang/$file.js"
+              if [ ! -f "$source" ]; then
+                  missing_sources+=($source)
+              fi
+              if [ ! -f "$target" ]; then
+                  missing_targets+=($target)
+              fi
+          done
+          if (( ${#missing_sources[@]} )); then
+              echo 'File sets do not match, missing sources ❌'
+              echo '----------------'
+              printf '%s\n' "${missing_sources[@]}"
+              echo '----------------'   
+              match=false
+          fi
+          if (( ${#missing_targets[@]} )); then
+              echo 'File sets do not match, missing targets ❌'
+              echo '----------------'
+              printf '%s\n' "${missing_targets[@]}"
+              echo '----------------'   
+              match=false
+          fi
+          if $match; then
+              echo 'File sets match ✔️'
+          fi
+          echo 'Checking for changes'
+          npm run lang:build 1>/dev/null
+          changes=$(git diff --name-only -- build/)
+          if [ -z "$changes" ]; then
+              echo 'No changes detected ✔️'
+          else
+              echo "Changes detected ❌"
+              echo '----------------'
+              echo "$changes"
+              echo '----------------'
+              echo 'Did you forget to run npm run lang:build?'        
+              match=false
+          fi
+          if $match; then
+              echo 'Lang files good ✔️'
+          else
+              echo 'Lang files not good ❌'
+              exit 1
+          fi
