--- a/langtools/build.template
+++ b/langtools/build.template
@@ -3,11 +3,14 @@ window.D2L = window.D2L || {};
 window.D2L.PolymerBehaviors = window.D2L.PolymerBehaviors || {};
 window.D2L.PolymerBehaviors.OutcomesUserProgress = window.D2L.PolymerBehaviors.OutcomesUserProgress || {};
 window.D2L.PolymerBehaviors.OutcomesUserProgress.LocalizeBehavior = window.D2L.PolymerBehaviors.OutcomesUserProgress.LocalizeBehavior || {};
+window.D2L.OutcomesUserProgress = window.D2L.OutcomesUserProgress || {};
+window.D2L.OutcomesUserProgress.Language = window.D2L.OutcomesUserProgress.Language || {};
+window.D2L.OutcomesUserProgress.Language.{{langPascal}} = {{langData}};
 
 /*
  * {{langPascal}} lang terms
  * @polymerBehavior D2L.PolymerBehaviors.OutcomesUserProgress.LocalizeBehavior.Lang{{langPascal}}Behavior
  */
 D2L.PolymerBehaviors.OutcomesUserProgress.LocalizeBehavior.Lang{{langPascal}}Behavior = {
-	{{langCamel}}: {{langData}}
+	{{langCamel}}: window.D2L.OutcomesUserProgress.Language.{{langPascal}}
 };
