--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.17",
   "description": "Web components for Outcomes User Progress page",
   "scripts": {
-    "lang:build": "lang-build -ec langtools/config.json",
+    "lang:build": "lang-build -es \"\t\" -c langtools/config.json",
     "lang:copy": "lang-copy -svc langtools/config.json",
     "lint:eslint": "eslint . --ext .js,.html",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open"
