Adjust for new version of license checker
Include it in the installed dependecies and add script so we can run it locally.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,9 +51,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Check licenses
-        run: |
-          npm install d2l-license-checker --no-save
-          npx license-checker-ci
+        run: npm run license-check
   verify-languages:
     name: Verify Languages
     timeout-minutes: 5
