--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:eslint": "eslint . --ext .js,.html",
     "format": "npm run -s format:eslint",
     "format:eslint": "npm run lint:eslint -- --fix",
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open"
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --preserve-symlinks --dedupe --watch --open"
   },
   "author": "D2L Corporation",
   "license": "Apache-2.0",
@@ -20,18 +20,16 @@
     "@polymer/iron-collapse": "^3.0.1",
     "@polymer/polymer": "^3.2.0",
     "d2l-activity-alignments": "Brightspace/d2l-activity-alignments.git#semver:^2",
-    "d2l-button": "BrightspaceUI/button#semver:^5",
     "d2l-hypermedia-constants": "^6",
-    "d2l-icons": "BrightspaceUI/icons#semver:^6",
     "d2l-localize-behavior": "BrightspaceUI/localize-behavior#semver:^2",
-    "d2l-more-less": "BrightspaceUI/more-less#semver:^5",
     "d2l-outcomes-overall-achievement": "Brightspace/d2l-outcomes-overall-achievement#semver:^1",
     "d2l-polymer-siren-behaviors": "Brightspace/polymer-siren-behaviors#semver:^1",
     "d2l-resize-aware": "BrightspaceUI/resize-aware#semver:^1",
-    "d2l-tooltip": "BrightspaceUI/tooltip#semver:^3",
-    "d2l-typography": "BrightspaceUI/typography#semver:^7",
+    "lit-element": "^2.4.0",
+    "lit-html": "^1.3.0",
     "s-html": "Brightspace/s-html#semver:^2",
-    "siren-entity": "BrightspaceHypermediaComponents/siren-entity#semver:^1"
+    "siren-entity": "BrightspaceHypermediaComponents/siren-entity#semver:^1",
+    "siren-sdk": "BrightspaceHypermediaComponents/siren-sdk#semver:^1"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
