--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "es-dev-server": "^2.0.2",
     "eslint": "^5.16.0",
     "eslint-config-brightspace": "^0.5.3",
-    "eslint-plugin-html": "^5.0.5"
+    "eslint-plugin-html": "^5.0.5",
+    "eslint-plugin-lit": "^1.3.0"
   }
 }
