--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@brightspace-ui/core": "^1.30.1",
     "@polymer/iron-a11y-announcer": "^3.0.2",
     "@polymer/iron-collapse": "^3.0.1",
-    "d2l-outcomes-overall-achievement": "Brightspace/d2l-outcomes-overall-achievement#semver:^1",
+    "d2l-outcomes-overall-achievement": "github:Brightspace/d2l-outcomes-overall-achievement#semver:^1",
     "lit-element": "^2.4.0",
     "siren-sdk": "BrightspaceHypermediaComponents/siren-sdk#semver:^1"
   },
