--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "siren-sdk": "BrightspaceHypermediaComponents/siren-sdk#semver:^1"
   },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "babel-eslint": "^10.0.1",
-    "d2l-license-checker": "^3.2.0",
-    "es-dev-server": "^2.0.2",
-    "eslint": "^5.16.0",
-    "eslint-config-brightspace": "^0.5.3",
-    "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-lit": "^1.3.0"
+    "@babel/eslint-parser": "^7",
+    "@webcomponents/webcomponentsjs": "^2",
+    "d2l-license-checker": "^3",
+    "es-dev-server": "^2",
+    "eslint": "^7",
+    "eslint-config-brightspace": "^0.14",
+    "eslint-plugin-html": "^6",
+    "eslint-plugin-lit": "^1",
+    "eslint-plugin-sort-class-members": "^1"
   }
 }
