--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-	"extends": [
-		"brightspace/lit-config"
-	],
-	"globals": {
-		"Set": true
-	},
-	"rules": {
-        "no-confusing-arrow": ["error", {"allowParens": true}]
-    }
+	"extends": "brightspace/lit-config"
 }
