Add  --preserve-symlinks
Can be useful for demo's during local testing. Doesn't do any harm.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:eslint": "eslint . --ext .js,.html",
     "format": "npm run -s format:eslint",
     "format:eslint": "npm run lint:eslint -- --fix",
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open"
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open --preserve-symlinks"
   },
   "author": "D2L Corporation",
   "license": "Apache-2.0",
