--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "license-check": "d2l-license-checker",
     "lint": "npm run lint:eslint",
     "lint:eslint": "eslint . --ext .js,.html",
-    "format": "npm run -s format:eslint",
+    "format": "npm run format:eslint",
     "format:eslint": "npm run lint:eslint -- --fix",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open --preserve-symlinks"
   },
