--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "license-check": "d2l-license-checker",
     "lint": "npm run lint:eslint",
     "lint:eslint": "eslint . --ext .js,.html",
+    "lint:lit": "lit-analyzer src/**/*.js --strict",
     "format": "npm run format:eslint",
     "format:eslint": "npm run lint:eslint -- --fix",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open --preserve-symlinks"
@@ -31,6 +32,7 @@
     "eslint-config-brightspace": "^0.14",
     "eslint-plugin-html": "^6",
     "eslint-plugin-lit": "^1",
-    "eslint-plugin-sort-class-members": "^1"
+    "eslint-plugin-sort-class-members": "^1",
+    "lit-analyzer": "^1"
   }
 }
