--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lang:build": "lang-build -es \"\t\" -c langtools/config.json",
     "lang:copy": "lang-copy -svc langtools/config.json",
     "license-check": "d2l-license-checker",
-    "lint": "npm run lint:eslint",
+    "lint": "npm run lint:eslint && npm run lint:lit",
     "lint:eslint": "eslint . --ext .js,.html",
     "lint:lit": "lit-analyzer src/**/*.js --strict",
     "format": "npm run format:eslint",
