--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d2l-outcomes-user-progress",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Web components for Outcomes User Progress page",
   "scripts": {
     "lang:build": "lang-build -es \"\t\" -c langtools/config.json",
@@ -16,12 +16,12 @@
   "author": "D2L Corporation",
   "license": "Apache-2.0",
   "dependencies": {
-    "@brightspace-ui/core": "^1.30.1",
-    "@polymer/iron-a11y-announcer": "^3.0.2",
+    "@brightspace-ui/core": "^1.124.0",
+    "@polymer/iron-a11y-announcer": "^3.1.0",
     "@polymer/iron-collapse": "^3.0.1",
     "d2l-outcomes-overall-achievement": "github:Brightspace/d2l-outcomes-overall-achievement#semver:^1",
     "lit-element": "^2.4.0",
-    "siren-sdk": "BrightspaceHypermediaComponents/siren-sdk#semver:^1"
+    "siren-sdk": "github:BrightspaceHypermediaComponents/siren-sdk#semver:^1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7",
