--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "license-check": "d2l-license-checker",
     "lint": "npm run lint:eslint && npm run lint:lit",
     "lint:eslint": "eslint . --ext .js,.html",
-    "lint:lit": "lit-analyzer src/**/*.js --strict",
+    "lint:lit": "lit-analyzer {src,test}/**/*.js --strict",
     "format": "npm run format:eslint",
     "format:eslint": "npm run lint:eslint -- --fix",
+    "test": "npm run lint && npm run test:headless",
+    "test:headless": "karma start",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open --preserve-symlinks"
   },
   "author": "D2L Corporation",
   "license": "Apache-2.0",
   "dependencies": {
     "@brightspace-ui/core": "^1.124.0",
-    "@open-wc/dedupe-mixin": "^1.3.0",
+    "@open-wc/dedupe-mixin": "^1",
     "@polymer/iron-a11y-announcer": "^3.1.0",
     "@polymer/iron-collapse": "^3.0.1",
     "d2l-outcomes-overall-achievement": "github:Brightspace/d2l-outcomes-overall-achievement#semver:^1",
@@ -24,14 +26,20 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7",
+    "@open-wc/testing": "^2",
+    "@open-wc/testing-karma": "^4",
     "@webcomponents/webcomponentsjs": "^2",
     "d2l-license-checker": "^3",
+    "deepmerge": "^4",
     "es-dev-server": "^2",
     "eslint": "^7",
     "eslint-config-brightspace": "^0.14",
+    "eslint-plugin-chai-friendly": "^0.6",
     "eslint-plugin-html": "^6",
     "eslint-plugin-lit": "^1",
+    "eslint-plugin-mocha": "^8",
     "eslint-plugin-sort-class-members": "^1",
-    "lit-analyzer": "^1"
+    "lit-analyzer": "^1",
+    "mocha": "^8"
   }
 }
