--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint:eslint": "eslint . --ext .js,.html",
     "lint:lit": "lit-analyzer {src,test}/**/*.js --strict",
     "lint:style": "stylelint **/*.js",
-    "format": "npm run format:eslint",
+    "format": "npm run format:eslint && npm run format:style",
     "format:eslint": "npm run lint:eslint -- --fix",
+    "format:style": "npm run lint:style -- --fix",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open --preserve-symlinks",
     "test": "npm run lint && npm run test:headless",
     "test:headless": "karma start",
