US129365 - Switch to @web/dev-server

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "D2L Corporation",
   "license": "Apache-2.0",
   "dependencies": {
-    "@brightspace-ui/core": "^1.124.0",
+    "@brightspace-ui/core": "^1.147.1",
     "@open-wc/dedupe-mixin": "^1",
     "@polymer/iron-a11y-announcer": "^3",
     "@polymer/iron-collapse": "^3",
@@ -33,10 +33,10 @@
     "@brightspace-ui/stylelint-config": "^0.2",
     "@open-wc/testing": "^2",
     "@open-wc/testing-karma": "^4",
+    "@web/dev-server": "^0.1",
     "@webcomponents/webcomponentsjs": "^2",
     "d2l-license-checker": "^4",
     "deepmerge": "^4",
-    "es-dev-server": "^2",
     "eslint": "^7",
     "eslint-config-brightspace": "^0.14",
     "eslint-plugin-chai-friendly": "^0.7",
@@ -45,7 +45,7 @@
     "eslint-plugin-mocha": "^9",
     "eslint-plugin-sort-class-members": "^1",
     "lit-analyzer": "^1",
-    "messageformat-validator": "^1",
+    "messageformat-validator": "github:bearfriend/messageformat-validator",
     "mocha": "^9",
     "stylelint": "^13"
   }
