--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.4",
   "description": "Web components for Outcomes User Progress page",
   "scripts": {
-    "license-check": "d2l-license-checker",
+    "license-check": "d2l-license-checker -p",
     "lint": "npm run lint:eslint && npm run lint:lit && npm run lint:style",
     "lint:eslint": "eslint . --ext .js,.html",
     "lint:lit": "lit-analyzer {src,test}/**/*.js --strict",
