Add ability to copy lang from en to other

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint:lit": "lit-analyzer {src,test}/**/*.js --strict",
     "lint:style": "stylelint **/*.js",
     "lint:lang": "mfv -e",
-    "format": "npm run format:eslint && npm run format:style",
+    "format": "npm run format:lang && npm run format:eslint && npm run format:style",
     "format:eslint": "npm run lint:eslint -- --fix",
+    "format:lang": "mfv remove-extraneous && mfv add-missing",
     "format:style": "npm run lint:style -- --fix",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --dedupe --watch --open --preserve-symlinks",
     "test": "npm run lint && npm run test:headless",
